--- a/task1.html
+++ b/task1.html
@@ -97,7 +97,7 @@
           {
               if(ev.key == "Enter")
               {
-                search(searchBox);
+                search(searchBox.value);
               }
           })
       </script>
